# GameEngineGPT

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md
GameEngine/: CMakeLists.txt
GameEngine/app-example/: CMakeLists.txt  main.cpp
GameEngine/cmake/: dependencies.cmake
GameEngine/cmake/inConfig/: Config.h.in  PathEngine.h.in  VersionEngine.h.in
GameEngine/enginelib/: CMakeLists.txt  OpenGLApp.cpp  OpenGLApp.h  ftscore.h  ftspch.cpp  ftspch.h
GameEngine/enginelib/API/OpenGL/: OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h
GameEngine/enginelib/API/Windows/: Window_windows.cpp  Window_windows.h  WindowsInput.cpp
GameEngine/enginelib/Camera/: Camera.cpp  Camera.h
GameEngine/enginelib/Core/: Application.cpp  Application.h  Assert.cpp  Assert.h  Base.h  EntryPoint.cpp  EntryPoint.h  IWindow.cpp  IWindow.h  Ini.cpp  Init.cpp  Init.h  Input.h  InputCore.cpp  InputCore.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  LogGL.cpp  LogGL.h  Macro.h  MouseCodes.h  PlatformDetection.h  TimeStep.h  Timer.h
GameEngine/enginelib/Debug/: Instrumentor.h
GameEngine/enginelib/Events/: Event.cpp  Event.h  EventDef.h
GameEngine/enginelib/Renderer/: Camera.h  Gizmos.cpp  Gizmos.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h
GameEngine/enginelib/Utils/: EngineVersion.cpp  EngineVersion.h  ExceptionDebug.h  FilePath.h  HashedString.h  IncludeGL.h  ResourcePath.cpp  ResourcePath.h  StringUtils.cpp  StringUtils.h
GameEngine/sandbox/: CMakeLists.txt
GameEngine/sandbox/src/: main.cpp
SampleOpenGLAPp/src/: CMakeLists.txt
SampleOpenGLAPp/src/gameapp/: Application3D.cpp  Application3D.h  CMakeLists.txt  main.cpp
SampleOpenGLAPp/src/gameapp/src/: Application.cpp  Application.h  GLM_Header.h  Gizmos.cpp  Gizmos.h  IncludeGL.h  Input.cpp  Input.h
